--- a/src/Emoji.css
+++ b/src/Emoji.css
@@ -1,7 +1,7 @@
 .emoji {
 
     display: grid;
-    grid-template-columns: repeat(1fr);
+    grid-template-columns: repeat(3, 1fr);
 
     .situacao {
         font-size: 5em;
@@ -10,4 +10,5 @@
         display: flex;
         flex-direction: column;
     }
+    
 }
